Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <h1> hello i am leaving in beautiful country</h1>
 <h2> djfhfhjhfeubfehfehfeu </h2>
+<h2> i am attending classes</h2>
 <body>
     
 </body>
